--- a/TCC-CODE/package.json
+++ b/TCC-CODE/package.json
@@ -4,6 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
+    "start:dev": "cross-env EXPO_PUBLIC_APP_MODE=dev expo start",
+    "start:prod": "cross-env EXPO_PUBLIC_APP_MODE=prod expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -11,6 +13,7 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@audius/libs": "^1.2.118",
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
@@ -47,6 +50,7 @@
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
+    "cross-env": "^10.1.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0"
   },
