--- a/TCC-CODE/package.json
+++ b/TCC-CODE/package.json
@@ -3,6 +3,7 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
+    "preinstall": "npx npm-force-resolutions",
     "start": "expo start",
     "start:dev": "cross-env EXPO_PUBLIC_APP_MODE=dev expo start",
     "start:prod": "cross-env EXPO_PUBLIC_APP_MODE=prod expo start",
@@ -13,33 +14,34 @@
     "lint": "expo lint"
   },
   "dependencies": {
-    "@audius/libs": "^1.2.118",
+    "@audius/libs": "^1.2.24",
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-navigation/bottom-tabs": "^7.4.0",
-    "@react-navigation/elements": "^2.6.3",
-    "@react-navigation/native": "^7.1.17",
-    "@react-navigation/native-stack": "^7.3.26",
-    "expo": "~54.0.11",
+    "@react-navigation/bottom-tabs": "^7.4.8",
+    "@react-navigation/elements": "^2.6.5",
+    "@react-navigation/native": "^7.1.18",
+    "@react-navigation/native-stack": "^7.3.27",
+    "expo": "^54.0.12",
+    "expo-app-loading": "^2.2.1",
     "expo-audio": "~1.0.13",
     "expo-av": "~16.0.7",
     "expo-constants": "~18.0.9",
     "expo-document-picker": "~14.0.7",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.8",
+    "expo-image": "^3.0.9",
     "expo-linking": "~8.0.8",
     "expo-location": "^19.0.7",
-    "expo-router": "~6.0.9",
+    "expo-router": "^6.0.10",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.8",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-native": "0.81.4",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
+    "react-native": "^0.82.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-reanimated": "~4.1.1",
@@ -47,12 +49,17 @@
     "react-native-screens": "~4.16.0",
     "react-native-track-player": "^4.1.2",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "^0.6.0"
   },
   "devDependencies": {
     "cross-env": "^10.1.0",
-    "eslint": "^9.25.0",
-    "eslint-config-expo": "~10.0.0"
+    "eslint": "^9.37.0",
+    "eslint-config-expo": "~10.0.0",
+    "npm-force-resolutions": "^0.0.10"
+  },
+  "resolutions": {
+    "react": "19.1.1",
+    "react-dom": "19.1.1"
   },
   "private": true
 }
