--- a/TCC-CODE/app.json
+++ b/TCC-CODE/app.json
@@ -34,7 +34,8 @@
         }
       ],
       "expo-web-browser",
-      "expo-audio"
+      "expo-audio",
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true,
